# music-bot

./: main.py  pyproject.toml
cogs/: bot.py  music.py
