[tool.poetry]
name = "music-bot"
version = "0.1.0"
description = ""
authors = ["tuna2134 <masato.04.11.2007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
youtube_dl = "^2021.12.17"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
